--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,53 +1,60 @@
 <%= flash[:notice] %>
 <div class="container">
-    <h1>管理者 ユーザ情報編集</h1>
+    <h4>管理者 ユーザ情報編集</h4>
     <div class="row">
-      <div class="col-12">
-        <%= image_tag @user.profile_image %>
+      <div class="col-lg-4">
+        <div class="row user-img">
+          <%= image_tag @user.get_profile_image(200,200) %>
+        </div>
       </div>
-      <div class="col-6">
-        ユーザID
-      </div>
-      <div class="col-6">
-      <%= @user.id %>
-      </div>
-      <div class="col-6">
-        ユーザ名
-      </div>
-      <div class="col-6">
-        <% if @user.user_name.present? %>
-          <%= @user.user_name %>
-        <% else %>
-          未登録
-        <% end %>
-      </div>
-      <div class="col-6">
-        メールアドレス
-      </div>
-      <div class="col-6">
-        <%= @user.email %>
-      </div>
-      <div class="col-6">
-        プロフィール
-      </div>
-      <div class="col-6">
-        <% if @user.self_introduction.present? %>
-          <%= @user.self_introduction %>
-        <% else %>
-          未登録
-        <% end %>
-      </div>
-      <div class="col-6">
-        ユーザステータス
-      </div>
-      <div class="col-6">
+      
+      <div class="col-lg-8 user-edit">
         <%= form_with model: @user, url: admin_user_path(@user), local: true do |f| %>
-          <%= f.radio_button :is_deleted, :false %>
-          <%= f.label :is_deleted, "有効", value: :false %>
-          <%= f.radio_button :is_deleted, :true %>
-          <%= f.label :is_deleted, "退会", value: :true %>
-          <div class="col-6">
-            <%= f.submit "編集", class: "btn btn-success" %>
+          <table class="table table-bordered table-striped">
+            <tr>
+              <th>ユーザID</th>
+              <td class="user-id">
+                <%= @user.id %>
+              </td>
+            </tr>
+            <tr>
+              <th>ユーザ名</th>
+              <td class="user-name">
+                <% if @user.user_name.present? %>
+                  <%= @user.user_name %>
+                <% else %>
+                  未登録
+                <% end %>
+              </td>
+            </tr>
+            <tr>
+              <th>メールアドレス</th>
+              <td class="email">
+                <%= @user.email %>
+              </td>
+            </tr>
+            <tr>
+              <th>プロフィール</th>
+              <td class="profile">
+                <% if @user.self_introduction.present? %>
+                  <%= @user.self_introduction %>
+                <% else %>
+                  未登録
+                <% end %>
+              </td>
+            </tr>
+            <tr>
+              <th>ユーザステータス</th>
+              <td class="user-status">
+                  <%= f.radio_button :is_deleted, :false %>
+                  <%= f.label :is_deleted, "有効", value: :false %>
+                  <%= f.radio_button :is_deleted, :true %>
+                  <%= f.label :is_deleted, "退会", value: :true %>
+              </td>
+            </tr>
+          </table>
+          <div class="row justify-content-center">
+            <%= f.submit "更新", class: "btn btn-success" %>
           </div>
         <% end %>
       </div>
