--- a/app/views/public/posts/_cleaning_tool_fields.html.erb
+++ b/app/views/public/posts/_cleaning_tool_fields.html.erb
@@ -1,12 +1,10 @@
 <div class="nested-fields">
-  <table>
-    <tr>
-      <td class="td-fixed-cleaning_recipe">
-        <%= f.text_area :cleaning_tool_name, placeholder: "説明文" %>
-      </td>
-      <td class="td-fixed-delete">
-        <%= link_to_remove_association "削除", f %>
-      </td>
-    </tr>
-  </table>
+  <div class="row form-box">
+    <div class="col-lg-10 tool-form d-flex justify-content-center align-items-center w-100">
+      <%= f.text_field :cleaning_tool_name, class: "text-field" %>
+    </div>
+    <div class="col-lg-2">
+      <%= link_to_remove_association "削除", f, class: "btn btn-danger" %>
+    </div>
+  </div>
 </div>
