--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -3,7 +3,7 @@
     <% @posts.each do |post| %>
       <div class="col-lg-4 post-box">
         <%= link_to post_path(post.id) do %>
-        <div class="col-lg-12 post-img">
+        <div class="col-lg-12 index-post-img">
           <%= image_tag post.get_post_image(250,200) %>
           <div class="like">
             ♡<%= post.likes.count %>
