--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -12,7 +12,7 @@
   </div>
   
   <div class="row">
-    <div class="post-img">
+    <div class="show-post-img">
       <%= image_tag @post.get_post_image(400,400) %>
       <div id="show-like">
         <% if user_signed_in? %>
