--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,31 +1,40 @@
+
 <div class="container">
-  <h1>管理者 コメント一覧</h1>
-    <div class="row">
-      <div class="col-2">
-      コメントID
-      </div>
-      <div class="col-5">
-      投稿ユーザ名
-      </div>
-      <div class="col-5">
-      コメント
-      </div>
-      
-      <% @comments.each do |comment| %>
-        <div class="col-2">
-          <%= link_to comment.id, admin_comment_path(comment.id) %>
-        </div>
-        <div class="col-5">
-          <%= comment.comment %>
-        </div>
-        <div class="col-5">
-          <% if comment.user.user_name.present? %>
-            <%= comment.user.user_name %>
-          <% else %>
-            未登録
-          <% end %>
-        </div>
-      <% end %>
-      <%= paginate @comments %>
-    </div>
+  <h4>管理者 コメント一覧</h4>
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th scope="col">コメントID</th>
+          <th scope="col">投稿ユーザ名</th>
+          <th scope="col">コメント</th>
+          <th scope="col">更新日</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @comments.each do |comment| %>
+          <tr class="comment-index">
+            <td class="comment-id text-center">
+              <%= comment.id %>
+            </td>
+            <td class="comment-user">
+              <% if comment.user.user_name.present? %>
+                <%= comment.user.user_name %>
+              <% else %>
+                未登録
+              <% end %>
+            </td>
+            <td class="comment">
+              <%= comment.comment %>
+            </td>
+            <td class="date">
+              <%= comment.updated_at.strftime('%Y/%m/%d') %>
+            </td>
+            <td class="show-btn text-center">
+              <%= link_to "詳細", admin_comment_path(comment.id), class: "btn btn-success"  %>
+            </td>
+          </tr>
+        <% end %>
+        <%= paginate @comments %>
+      </tbody>
+    </table>
 </div>
