--- a/app/views/admin/comments/show.html.erb
+++ b/app/views/admin/comments/show.html.erb
@@ -1,32 +1,34 @@
 <%= flash[:notice] %>
 <div class="container">
-    <h1>管理者 コメント詳細</h1>
-    <div class="row">
-      <div class="col-6">
-        コメントID
-      </div>
-      <div class="col-6">
-        <%= @comment.id %>
-      </div>
-      <div class="col-6">
-        ユーザ名
-      </div>
-      <div class="col-6">
-        <% if @comment.user.user_name.present? %>
-          <%= @comment.user.user_name %>
-        <% else %>
-          未登録
-        <% end %>
-      </div>
-      <div class="col-6">
-        コメント
-      </div>
-      <div class="col-6">
-        <%= @comment.comment %>
-      </div>
-      <div class="col-12">
-        <%= link_to "削除する", post_comment_path(@comment), class: "btn btn-success",
-        data: {confirm: "コメントを削除します。よろしいですか？"} %>
-      </div>
-    </div>
+  <h4>管理者 コメント詳細</h4>
+  <div class="row comment-show justify-content-center">
+    <table class="table table-bordered table-striped w-75">
+      <tr>
+        <th>コメントID</th>
+        <td>
+          <%= @comment.id %>
+        </td>
+      </tr>
+      <tr>
+        <th>ユーザ名</th>
+        <td>
+          <% if @comment.user.user_name.present? %>
+            <%= @comment.user.user_name %>
+          <% else %>
+            未登録
+          <% end %>
+        </td>
+      </tr>
+      <tr>
+        <th>コメント</th>
+        <td>
+          <%= @comment.comment %>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <div class="row justify-content-center">
+    <%= link_to "削除する", post_comment_path(@comment), class: "btn btn-danger",
+    data: {confirm: "コメントを削除します。よろしいですか？"} %>
+  </div>
 </div>
