--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,53 +1,86 @@
 <div class="container">
-    <h1>管理者 投稿詳細</h1>
-    <div class="row">
-      <span>タイトル</span>
-      <%= @post.title %>
-      <% if @post.user == current_user %>
-        <%= link_to "投稿編集する", edit_user_path(current_user.id) %>
-      <% end %>
-    </div>
-    <div class="row">
-      <%= image_tag @post.get_post_image(100,100) %>
-      <%= link_to @user.user_name, user_path(@user.id) %>
-      <span>いいね</span>
-      ♡<%= @post.likes.count %>
-     <span>作成日時</span>
-     <%= @post.created_at.strftime('%Y/%m/%d') %>
-    </div>
-    <div class="row">
-      <span>説明</span>
-      <%= @post.introduction %>
-    </div>
-    <div class="row">
-      <span>カテゴリ</span>
-      <% @post.categories.each do |category| %>
-        <%= category.category_name %>
-      <% end %>
-    </div>
-    <div class="row">
-      <span>用意するもの</span>
-      <% @post.cleaning_tools.each do |cleaning_tool| %>
-        <%= cleaning_tool.cleaning_tool_name %>
-      <% end %>
-    </div>
-    <div class="row">
-      <span>掃除方法</span>
-      <% @post.cleaning_recipes.each do |cleaning_recipe| %>
-        <%= image_tag cleaning_recipe.get_recipe_image, size: "100x100" %>
-        <%= cleaning_recipe.cleaning_recipe %>
-      <% end %>
-      
-      <div>
-        <p>コメント件数：<%= @post.comments.count %></p>
-        
-        <% @post.comments.each do |post_comment| %>
-          <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
-          <%= post_comment.user.user_name %>
-          <%= post_comment.created_at.strftime('%Y/%m/%d') %>
-          <%= post_comment.comment %>
-          <%= link_to "詳細", admin_comment_path %>
-        <% end %>
+  <h4>管理者 投稿詳細</h4>
+  
+  <div class="row">
+    <h2><%= @post.title %></h2>
+  </div>
+  
+  <div class="row">
+    <div class="show-post-img">
+      <%= image_tag @post.get_post_image(200,200) %>
+      <div id="show-like">
+        ♡<%= @post.likes.count %>
       </div>
-    </div>  
+    </div>
+  </div>
+      
+  <div class="row intro">
+    <%= @post.introduction %>
+  </div>
+  <div class="row user-info">
+    <span>作成者：</span>
+    <%= image_tag @user.get_profile_image(50,50) %>
+    <%= link_to @user.user_name, user_path(@user.id) %>
+  </div>
+  <div class="row show-date">
+    <span>作成日時：</span>
+    <%= @post.created_at.strftime('%Y/%m/%d') %>
+  </div>
+  <div class="row category-area">
+    <span>カテゴリ：</span>
+    <% @post.categories.each do |category| %>
+      <div class="category category-tag">
+        <%= category.category_name %>
+      </div>
+    <% end %>
+  </div>
+      
+  <div class="row">
+    <div class="sub-title">掃除道具</div>
+    <div class="tool">
+      <% @post.cleaning_tools.each do |cleaning_tool| %>
+        ・<%= cleaning_tool.cleaning_tool_name %><br>
+      <% end %>
+    </div>
+    <div class="sub-title">掃除方法</div>
+    <div class="col-lg-12">
+      <% @post.cleaning_recipes.each do |cleaning_recipe| %>
+        <div class="row recipe">
+          <div class="col-lg-4">
+            <%= image_tag cleaning_recipe.get_recipe_image(100,100) %>
+          </div>
+          <div class="col-lg-8">
+            <%= cleaning_recipe.cleaning_recipe %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+    
+  <div class="row">
+    <div class="row comment-box justify-content-center">
+      <!--<div class="col-lg-12 d-flex justify-content-center align-items-center">-->
+        コメント件数：<%= @post.comments.count %>件
+      <!--</div>-->
+    </div>
+    <div class="col-lg-12 comment-box">
+      <% @post.comments.each do |comment| %>
+        <div class="row comment-list">
+          <div class="col-lg-2">
+            <%= image_tag comment.user.get_profile_image(50,50) %>
+            <%= comment.user.user_name %>
+          </div>
+          <div class="col-lg-6">
+            <%= comment.comment %>
+          </div>
+          <div class="col-lg-2">
+            <%= comment.created_at.strftime('%Y/%m/%d') %>
+          </div>
+          <div class="col-lg-2">
+            <%= link_to "詳細", admin_comment_path, class: "btn btn-success" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
