--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,53 +1,60 @@
 <div class="container">
-    <h1>管理者 ユーザ情報詳細</h1>
+    <h4>管理者 ユーザ情報詳細</h4>
     <div class="row">
-      <div class="col-12">
-        <%= image_tag @user.profile_image %>
+      <div class="col-lg-4">
+        <div class="row user-img">
+          <%= image_tag @user.get_profile_image(200,200) %>
+        </div>
       </div>
-      <div class="col-6">
-        ユーザID
+      
+      <div class="col-lg-8 user-show">
+        <table class="table table-bordered table-striped">
+          <tr>
+            <th>ユーザID</th>
+            <td class="user-id">
+              <%= @user.id %>
+            </td>
+          </tr>
+          <tr>
+            <th>ユーザ名</th>
+            <td class="user-name">
+              <% if @user.user_name.present? %>
+                <%= @user.user_name %>
+              <% else %>
+                未登録
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <th>メールアドレス</th>
+            <td class="email">
+              <%= @user.email %>
+            </td>
+          </tr>
+          <tr>
+            <th>プロフィール</th>
+            <td class="profile">
+              <% if @user.self_introduction.present? %>
+                <%= @user.self_introduction %>
+              <% else %>
+                未登録
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <th>ユーザステータス</th>
+            <td class="user-status">
+                <% if @user.is_deleted %>
+                  退会
+                <% else %>
+                  有効
+                <% end %>
+              </td>
+          </tr>
+        </table>
       </div>
-      <div class="col-6">
-      <%= @user.id %>
-      </div>
-      <div class="col-6">
-        ユーザ名
-      </div>
-      <div class="col-6">
-        <% if @user.user_name.present? %>
-          <%= @user.user_name %>
-        <% else %>
-          未登録
-        <% end %>
-      </div>
-      <div class="col-6">
-        メールアドレス
-      </div>
-      <div class="col-6">
-        <%= @user.email %>
-      </div>
-      <div class="col-6">
-        プロフィール
-      </div>
-      <div class="col-6">
-        <% if @user.self_introduction.present? %>
-          <%= @user.self_introduction %>
-        <% else %>
-          未登録
-        <% end %>
-      </div>
-      <div class="col-6">
-        ユーザステータス
-      </div>
-      <div class="col-6">
-        <% if @user.is_deleted %>
-          退会
-        <% else %>
-          有効
-        <% end %>
-      </div>
-      <div class="col-12">
-        <%= link_to "編集", edit_admin_user_path(@user), class: "btn btn-success" %>
-      </div>
+    </div>
+    <div class="row justify-content-center">
+      <%= link_to "編集する", edit_admin_user_path, class: "btn btn-success"  %>
     </div>
 </div>
