--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -5,7 +5,7 @@
           <div class="col-lg-4 post-box">
             <%= link_to post_path(post.id) do %>
               <div class="row">
-                <div class="post-img">
+                <div class="index-post-img">
                   <%= image_tag post.get_post_image(250,200) %>
                   <div class="like">
                     ♡<%= post.likes.count %>
