--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,35 +1,48 @@
 <%= flash[:notice] %>
 <div class="container">
   <h4>新規投稿</h4>
-  <!--<div class="row justify-content-center">-->
+  <div class="row">
     <%= form_with model: @post, url: posts_path do |f| %>
       <%= render 'layouts/error_messages', model: f.object %>
-      <div class="row justify-content-center">
-        <span>タイトル</span>
-        <%= f.text_field :title %>
-      </div>
-      <div class="row justify-content-center">
-        <span>トップ画像</span>
-        <%= f.file_field :post_image,accept: "image/*" %>
-      </div>
-      <div class="row justify-content-center">
-        <span>説明</span>
-        <%= f.text_area :introduction %>
-      </div>
-      <div class="row justify-content-center">
-        <span>カテゴリ</span>
-        <div class="field">
-          <%= collection_check_boxes(:post, :category_ids, Category.all, :id, :category_name ) do |t|  %>
-            <% t.label { t.check_box + t.text } %>
-          <% end %> 
+      <div class="row">
+        <div class="col-lg-2">
+          <%= f.label :title, "タイトル", class: "sub-title" %>
+        </div>
+        <div class="col-lg-10 post-form align-self-center">
+          <%= f.text_field :title, class: "title" %>
         </div>
       </div>
-      
-      <div class="row justify-content-center">
-        <span>用意するもの</span>
-        <div class="add-botton-box">
-          <%= link_to_add_association "追加ボタン", f, :cleaning_tools,
-            class: 'add_fields',
+      <div class="row">
+        <div class="col-lg-2">
+          <%= f.label :post_image, "トップ画像", class: "sub-title" %>
+        </div>
+        <div class="col-lg-10 align-self-center">
+          <%= f.file_field :post_image,accept: "image/*" %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-2">
+          <%= f.label :introduction, "説明", class: "sub-title" %>
+        </div>
+        <div class="col-lg-10 post-form align-self-center">
+          <%= f.text_area :introduction %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-2">
+          <%= f.label :category_name, "カテゴリ", class: "sub-title" %>
+        </div>
+        <div class="col-lg-10 post-form field">
+            <%= collection_check_boxes(:post, :category_ids, Category.all, :id, :category_name ) do |t|  %>
+              <% t.label { t.check_box + t.text } %>
+            <% end %> 
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-2">
+          <p><%= f.label :cleaning_tools, "掃除用具", class: "sub-title" %></p>
+          <%= link_to_add_association "フォーム追加", f, :cleaning_tools,
+            class: 'add_fields btn btn-info',
             id: 'add-btn',
             data: {
               association_insertion_node: '#detail-association-insertion-point',
@@ -37,33 +50,46 @@
               } 
           %>
         </div>
-        <div id="detail-association-insertion-point">
-          <%= f.fields_for :cleaning_tools do |form| %>
-            <%= render "cleaning_tool_fields", f: form %>
-          <% end %>
+        <div class="col-lg-10 post-form">
+          <div id="detail-association-insertion-point">
+            <%= f.fields_for :cleaning_tools do |form| %>
+              <%= render "cleaning_tool_fields", f: form %>
+            <% end %>
+          </div>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <span>掃除方法</span>
-        <div class="add-botton-box">
-          <%= link_to_add_association "追加ボタン", f, :cleaning_recipes,
-            class: 'add_fields',
-            id: 'add-btn',
-            data: {
-              association_insertion_node: '#detail-association-insertion-point2',
-              association_insertion_method: 'append'
-              } 
-          %>
+      
+      <div class="row">
+        <div class="col-lg-2">
+          <%= f.label :cleaning_recipes, "掃除方法", class: "sub-title" %>
+          <div class="add-botton-box">
+            <%= link_to_add_association "フォーム追加", f, :cleaning_recipes,
+              class: 'add_fields btn btn-info',
+              id: 'add-btn',
+              data: {
+                association_insertion_node: '#detail-association-insertion-point2',
+                association_insertion_method: 'append'
+                } 
+            %>
+          </div>
         </div>
-        <div id="detail-association-insertion-point2">
-          <%= f.fields_for :cleaning_recipes do |form| %>
-            <%= render "cleaning_recipe_fields", f: form %>
-          <% end %>
+        <div class="col-lg-10 post-form">
+          <div id="detail-association-insertion-point2">
+            <%= f.fields_for :cleaning_recipes do |form| %>
+              <%= render "cleaning_recipe_fields", f: form %>
+            <% end %>
+          </div>
         </div>
       </div>
-      <%= f.submit "下書き保存", :name => 'draft_post', class: "btn btn-primary" %>
-      <%= f.submit "投稿", name: "true_post", class: "btn btn-success" %>
+      
+      <div class="row justify-content-end">
+        <div class="col-lg-2">
+          <%= f.submit "下書き保存", :name => 'draft_post', class: "btn btn-primary" %>
+        </div>
+        <div class="col-lg-2">
+          <%= f.submit "投稿", name: "true_post", class: "btn btn-success" %>
+        </div>
+      </div>
     <% end %>
-  <!--</div>-->
-  
+  </div>
 </div>
